fixed the content covering problem

--- a/css/furniture.css
+++ b/css/furniture.css
@@ -1,5 +1,5 @@
 body {
-    padding-top: 160px;
+    padding-top: 12%;
 }
 
 .headerDivider {
